test/visibility/except/functionExclude.good
functionExclude.chpl:14: In function 'main':
functionExclude.chpl:15: error: unresolved call 'foo()'
